# tinysh-content-factory

./: .env.example  .gitignore  CLI_REFERENCE.md  README.md  openapi_full.json  profiles.yaml  pyproject.toml  test_ffmpeg_only.py
.claude/: settings.local.json
.github/: BATCH_SCHEDULING.md  CHANGELOG.md  CHANNEL_STRUCTURE.md  CHATTERBOX_INSTALLATION.md  CLAUDE.md  OPTIMIZATION_PLAN.md  QUICK_START_2PHASE.md  RATE_LIMIT_FIX.md  SESSION_SUMMARY.md  TODO.md  TWO_PHASE_UPLOAD.md  YOUTUBE_SCHEDULING.md
channels/finance_wins/: channel.yaml
channels/momentum_mindset/: channel.yaml  profiles.yaml
channels/momentum_mindset/prompts/: README.md
channels/wealth_wisdom/: channel.yaml  profiles.yaml
channels/wealth_wisdom/prompts/: image.txt  script.txt
config/: README.md
docs/: BATCH_SCHEDULING.md  CHANNEL_STRUCTURE.md  DEBUGGING.md  DEVELOPMENT_WORKFLOW.md  FEATURE3_ANALYSIS.md  FEATURE3_USAGE_EXAMPLE.md  MIGRATION_SUMMARY.md  MULTI_CHANNEL_SYSTEM.md  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_PLAN.md  QUICK_START_2PHASE.md  QUICK_TEST.md  SESSION_SUMMARY_2025-11-06.md  SESSION_SUMMARY_QUALITY_PRESETS.md  SESSION_SUMMARY_SMART_CACHE.md  SESSION_SUMMARY_VIDEO_MIGRATION.md  SETUP.md  TESTING_GUIDE.md  TWO_PHASE_UPLOAD.md  VIDEO_OPTIMIZATION_ANALYSIS.md  YOUTUBE_SCHEDULING.md
docs/legacy/workflow_youtube_shorts/: builder-version-mas-nueva.py
scripts/: schedule_upload_example.py  validate_system.py
server/: check_python.py  requirements.txt  server.py
server-code-and-layout/: server.py
server-code-and-layout/api_server/: v1_media_router.py
server-code-and-layout/utils/: image.py
server/api_server/: v1_media_router.py  v1_utils_router.py
server/video/: builder.py  caption.py
src/: __init__.py  channel_config.py  config.py  constants.py  main.py  models.py  quality_presets.py  workflow.py
src/media_local/: __init__.py  config.py
src/media_local/audio/: stt.py
src/media_local/ffmpeg/: __init__.py  wrapper.py
src/media_local/storage/: manager.py
src/media_local/tts/: __init__.py  chatterbox.py  kokoro.py
src/media_local/video/: builder.py  caption.py
src/services/: llm.py  logger_service.py  media.py  profile_manager.py  reddit.py  scheduler.py  seo_optimizer.py  sheets.py  video_compiler.py  youtube.py  youtube_downloader.py
src/services/cache/: __init__.py  asset_cache.py  similarity.py  storage.py
src/utils/: __init__.py  cache.py  retry.py
tests/: __init__.py  reproduce_tts.py  test_cache.py  test_chatterbox_local.py  test_integration.py  test_integration_simple.py  test_local_modules.py  test_media_local.py  test_quality_presets.py  test_tts_modules.py  test_video_local.py  test_video_merge_local.py  test_workflow.py
tests/integration/: README_UPLOAD_TESTS.md  __init__.py  test_tts.py  test_upload_scheduled.py  test_upload_simple.py
tools/: find_video_endpoint.py  temp.ps1  test_video_simple.py
workflow_youtube_shorts/: builder-version-mas-nueva.py  v1_media_router-version-antigua.py
(+1 files in other folders)
